--- a/app/src/main/res/layout/activity_comment_view.xml
+++ b/app/src/main/res/layout/activity_comment_view.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="bottom|right"
+        android:layout_marginBottom="?attr/actionBarSize"
         android:background="#efefef"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
